--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+    <h1>Travel Tip</h1>
 <script src="js/main.js"></script>
 </body>
 </html>
