--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             <section class="location-table"></section>
             <div id="map" class="location-map"></div>
         </div>
+        <div class="modal-location">
+            <input type="text" placeholder="Enter location..">
+            <button class="save-location-btn">Save</button>
+        </div>
     </div>
 
     <script type="module" src="js/mapController.js"></script>
