--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <button class="save-location-btn">Save</button>
         </div>
     </div>
-
+    <script src="lib/axios.js"></script>
+    <script src="js/services/weatherService.js"></script>
     <script type="module" src="js/mapController.js"></script>
 </body>
 
