--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div id="map" class="location-map"></div>
         </div>
         <div class="modal-location">
-            <input type="text" placeholder="Enter location..">
+            <input type="text" placeholder="Enter location.." id="location-name">
             <button class="save-location-btn">Save</button>
         </div>
     </div>
