after weather commit

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <input type="text" placeholder="Enter location..">
             <button class="save-location-btn">Save</button>
         </div>
+        <div class="weather-container">
+
+        </div>
     </div>
     <script src="lib/axios.js"></script>
     <script src="js/services/weatherService.js"></script>
