--- a/index.html
+++ b/index.html
@@ -9,19 +9,24 @@
 </head>
 
 <body>
-    <div class="travel-container flex">
-        <h1>Travel Tip</h1>
-        <div class="main-container flex">
-            <input type="text" class="location-btn"></input>
-            <button class="go-btn">GO</button>
-            <button class="myLocation-btn">My Location</button>
+    <div class="travel-container flex-columns">
+        <div class="box flex space-evenly">
+            <h1>Travel Tip</h1>
+            <div class="location-btn-container">
+                <input type="text" class="location-btn"></input>
+                <button class="go-btn">GO</button>
+                <button class="myLocation-btn">My Location</button>
+            </div>
+        </div>
+        <div class="location-name-container flex space-evenly">
             <h3>Location</h3><span class="location"></span>
             <button>Copy Location</button>
         </div>
-        <div class="map-container flex">
+        <div class="box flex space-evenly">
             <section class="location-table"></section>
             <div id="map" class="location-map"></div>
         </div>
+
         <div class="modal-location">
             <input type="text" placeholder="Enter location.." id="location-name">
             <button class="save-location-btn">Save</button>
