--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
             <input type="text" placeholder="Enter location.." id="location-name">
             <button class="save-location-btn">Save</button>
         </div>
-        <div class="weather-container">
-        </div>
+        <div class="weather-container"></div>
     </div>
     <script src="lib/axios.js"></script>
     <script src="js/services/weatherService.js"></script>
